Sidebar for meanings.html, fix spacing/anchor for titles, add 'top' bullet. #7

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,7 @@ body {
 h1 {
     text-align: center;
     font-size: 2em;
+    margin: 5px auto;
 }
 
 h2 {
@@ -53,7 +54,7 @@ a:hover {
 
 .container {
     position: relative;
-    top: 55px;
+    /*top: 55px;*/
     width: 90%;
     margin: auto;
     margin-bottom: 20px;
